--- a/Robert_lab-7.html
+++ b/Robert_lab-7.html
@@ -129,7 +129,29 @@ $(document).ready(function () {
 </div>
 
 
-<p>This: I’m Robert and I’m updating this markdown file.</p>
+<p>This: I’m Robert and I’m updating this markdown file here.</p>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## -- Attaching packages ----------------------------------------------------------------------------------------- tidyverse 1.2.1 --</code></pre>
+<pre><code>## v ggplot2 3.0.0     v purrr   0.2.5
+## v tibble  1.4.2     v dplyr   0.7.6
+## v tidyr   0.8.1     v stringr 1.3.1
+## v readr   1.1.1     v forcats 0.3.0</code></pre>
+<pre><code>## -- Conflicts -------------------------------------------------------------------------------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>gc_df &lt;- read_csv(&quot;gc_df.csv&quot;)</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   caseid = col_integer(),
+##   make_get_guns = col_character(),
+##   gender = col_character(),
+##   ideology = col_character(),
+##   trust_in_gov = col_character(),
+##   religion = col_character(),
+##   race = col_character()
+## )</code></pre>
+<p>WE are asking: Is there a significant difference in recommended gun control action for male and female respondents (should guns be easier, harder, to get?)</p>
+<p>This: I’m Nate and I’m updating this markdown file here.</p>
 
 
 
